<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#374">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caracteristicas"
        android:textAlignment="center"
        android:textColor="#FFF"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criador_mercedesbens"
        android:textAlignment="center"
        android:textColor="#FFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/velocidade_maxima_150_km_h"
        android:textAlignment="center"
        android:textColor="#FFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_o_30_mil"
        android:textAlignment="center"
        android:textColor="#FFF"/>


</LinearLayout>