<RelativeLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentContainer"
        android:layout_alignParentBottom="true"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/veja_informacoes_sobre_o_seu_ve_culo_preferido"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ferrari"
            android:onClick="alterarBanner1"
            android:layout_weight="1"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/van"
            android:onClick="alterarBanner2"
            android:layout_weight="1"/>/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jipe"
            android:onClick="alterarBanner3"
            android:layout_weight="1"/>/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>


